# xlwings-server-testing

./: .gitignore  Makefile  main.py  pyproject.toml
.devcontainers/: devcontainer.json
custom_functions/: __init__.py  functions.py
custom_scripts/: __init__.py  scripts.py
routers/: custom.py
static/js/: main.js
static/js/custom-dialog/: dialog.js
templates/: custom_dialog.html  taskpane.html
